# hw7-regression

./: README.md  pyproject.toml
.github/workflows/: main.yml
regression/: logreg.py
test/: test_logreg.py
