[build-system]
requires = [
	"flit_core >=3.8",
	"python_version >= '3.9'"
	]
build-backend = "flit_core.buildapi"
dynamic=["version"]

[project]
name = "Regression"
authors = [{name = "Joaquín Magaña", email = "joaquin.magana@ucsf.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest", "numpy", "matplotlib", "scikit-learn", "pandas", "scipy"]

[tool.coverage.run]
source = ["src"] # parent directory of package

[project.urls]
Home = "https://github.com/J-Pesos/hw7-regression"